Finally first ray traced example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,16 @@ file(GLOB IMGUI_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/imgui-docking/backends/imgui_impl_opengl3.cpp"
 )
 
-set (CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_BUILD_TYPE Release)
 
 set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/imgui-docking)
 set(IMGUI_BACKENDS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/imgui-docking/backends)
 set(GLFW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glfw-3.4/include)
 set(GLFW_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glfw-3.4/src)
-set(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glad/include)
-set(GLAD_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glad/src)
+set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glm/include)
 
 add_subdirectory(glfw-3.4)
-add_subdirectory(glad)
 
 set(SOURCES src/Renderer.cpp
             src/Image.cpp
@@ -25,7 +24,7 @@ set(SOURCES src/Renderer.cpp
             src/Camera.cpp)
 
 add_library(ptrace STATIC ${SOURCES} ${IMGUI_SOURCES})
-target_include_directories(ptrace PRIVATE ${GLAD_INCLUDE_DIR} ${IMGUI_DIR} ${GLFW_INCLUDE_DIR})
+target_include_directories(ptrace PRIVATE ${IMGUI_DIR} ${GLFW_INCLUDE_DIR})
 target_link_directories(ptrace PRIVATE ${GLFW_LIB_DIR})
 target_link_libraries(ptrace PRIVATE glfw3 opengl32)
 
