--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ project(examples)
 add_subdirectory(imgui_simple)
 add_subdirectory(imgui_image)
 add_subdirectory(red_sphere)
+add_subdirectory(with_the_lights_out)
