Add Box, fixed artifacts, add bsdf for better reading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ add_subdirectory(glfw-3.4)
 set(SOURCES src/Renderer.cpp
             src/Image.cpp
             src/Application.cpp
-            src/Camera.cpp)
+            src/Camera.cpp
+            src/BSDF.cpp)
 
 add_library(ptrace STATIC ${SOURCES} ${IMGUI_SOURCES})
 target_include_directories(ptrace PRIVATE ${IMGUI_DIR} ${GLFW_INCLUDE_DIR})
