--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(imgui_image)
 add_subdirectory(red_sphere)
 add_subdirectory(with_the_lights_out)
 add_subdirectory(triangle)
+add_subdirectory(boxes)
