--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,7 +3,8 @@ project(examples)
 
 add_subdirectory(imgui_simple)
 add_subdirectory(imgui_image)
-# add_subdirectory(red_sphere)
-# add_subdirectory(with_the_lights_out)
-# add_subdirectory(triangle)
+add_subdirectory(red_sphere)
+add_subdirectory(with_the_lights_out)
+add_subdirectory(triangle)
 add_subdirectory(boxes)
+add_subdirectory(acceleration)
