--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][Dock]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -18,6 +17,8 @@ Pos=896,0
 Size=384,720
 Collapsed=0
 
-[Docking][Data]
-DockSpace ID=0x753F3EA2 Window=0xE2091CDF Pos=233,262 Size=1280,720 CentralNode=1
+[Window][GOIDA]
+Pos=60,60
+Size=32,35
+Collapsed=0
 
